--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,23 @@
 *.exe
 *.out
 *.app
+
+*.sln
+*.suo
+*.VC
+*.ipch
+cpp/CPP_Study/CPP_Study.sln
+cpp/CPP_Study/.vs/CPP_Study/project-colors.json
+cpp/CPP_Study/.vs/CPP_Study/v17/.suo
+cpp/CPP_Study/.vs/CPP_Study/v17/Browse.VC.db
+cpp/CPP_Study/.vs/CPP_Study/v17/ipch/AutoPCH/60f93b50df1b60c9/CPP_STUDY.ipch
+cpp/CPP_Study/CPP_Study/CPP_Study.cpp
+*.vcxproj
+*.vcxproj.*
+*.exe.recipe
+*.ilk
+*.log
+*.idb
+*.pdb
+*.tlog
+*.pdb
